--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <nav>
 <a href="/">WebStudio</a>
 <ul>
-   <li><a href="">Студия</a></li>
-   <li><a href="">Портфолио</a></li>
-   <li><a href="">Контакты</a></li>
+   <li><a href="#">Студия</a></li>
+   <li><a href="#">Портфолио</a></li>
+   <li><a href="#">Контакты</a></li>
 </ul>
     </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+380961111111">+38 096 111 11 11</a>
+ <ul>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+ </ul>
 </header>
 
 <main>
@@ -86,5 +88,13 @@
         </ul>
     </section>
 </main>
+<footer>
+    <a href="/">WebStudio</a>
+    <address>
+       <p>г. Киев, пр-т Леси Украинки, 26</p>
+    <a href="mailto:info@example.com">info@example.com</a>
+    <a href="tel:+380991111111">+38 099 111 11 11</a>
+    </address>
+</footer>
 </body>
 </html>
